<resources>
    <string name="app_name">InstagramClone</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="english">English</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="or">OR</string>
    <string name="phone_number_username_or_email">phone number,username, or email</string>
    <string name="password">password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Log In</string>
    <string name="don_t_have_an_account_sign_up">Don’t have an account? <font color="#1877F2">sign up</font></string>
    <string name="signup_to_see_photos_and_videos_from_your_friend">Signup to see photos and videos from your friend</string>
    <string name="email">email</string>
    <string name="phone">phone</string>
    <string name="name">name</string>
    <string name="user_name">username</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account_log_in">Already have an account? <font color="#1877F2">Log In</font></string>
    <string name="location">%1$s</string>
    <string name="user_id">%1$s</string>
    <string name="like">Like</string>
    <string name="like_no">%1$s</string>
    <string name="user_caption"><b>%1$s</b> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</string>
    <string name="user_id_re">Rupal0993</string>
    <string name="btn_confirm">Confirm</string>
    <string name="btn_delete">Delete</string>
    <string name="Posts">Posts</string>
    <string name="post_no">1,234</string>
    <string name="Followers">Followers</string>
    <string name="followers_no">5,678</string>
    <string name="Following">Following</string>
    <string name="following_no">9,101</string>
    <string name="Username">Username</string>
    <string name="text_here">Text Here</string>
    <string name="category">Category/Genre text</string>
    <string name="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</string>
    <string name="link">Link goes here</string>
    <string name="txtfollowedby">Followed by username, username and 100 others</string>
    <string name="follow">Follow</string>
    <string name="message">Edit Profile</string>
    <string name="subscribe">Subscribe</string>
    <string name="contact">Contact</string>
    <string name="username">username</string>
</resources>