<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.register.RegisterFragment">


    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_instagram_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/gl_registration" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="16dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/Custom_text_style_18sp_gray"
        android:layout_marginStart="42dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="42dp"
        android:textAlignment="center"
        android:textColor="?attr/colorTertiary"
        android:text="@string/signup_to_see_photos_and_videos_from_your_friend"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <Button
        android:id="@+id/btn_continue_with_face_book"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/roboto_medium"
        android:lineHeight="21sp"
        android:paddingStart="18dp"
        android:text="@string/continue_with_facebook"
        android:textAllCaps="false"
        app:iconTint="@color/white"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:cornerRadius="8dp"
        app:icon="@drawable/ic_facebook_f"
        app:iconGravity="textStart"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        style="@style/Custom_text_style_15sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textColor="?attr/colorTertiary"
        app:layout_constraintBottom_toBottomOf="@+id/imageView8"
        app:layout_constraintEnd_toEndOf="@+id/btn_continue_with_face_book"
        app:layout_constraintStart_toStartOf="@+id/btn_continue_with_face_book"
        app:layout_constraintTop_toTopOf="@+id/imageView8" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:src="@drawable/line"
        app:layout_constraintStart_toStartOf="@+id/btn_continue_with_face_book"
        app:layout_constraintTop_toBottomOf="@+id/btn_continue_with_face_book" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:src="@drawable/line"
        app:layout_constraintEnd_toEndOf="@+id/btn_continue_with_face_book"
        app:layout_constraintTop_toTopOf="@+id/imageView8" />

    <EditText
        android:id="@+id/et_email_registration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        style="@style/Custom_Edit_Text"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        app:layout_constraintEnd_toEndOf="@+id/btn_continue_with_face_book"
        app:layout_constraintStart_toStartOf="@+id/btn_continue_with_face_book"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/et_phone_registration"
        style="@style/Custom_Edit_Text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/phone"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="@+id/et_email_registration"
        app:layout_constraintStart_toStartOf="@+id/et_email_registration"
        app:layout_constraintTop_toBottomOf="@+id/et_email_registration" />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/name"
        style="@style/Custom_Edit_Text"
        app:layout_constraintEnd_toEndOf="@+id/et_phone_registration"
        app:layout_constraintStart_toStartOf="@+id/et_phone_registration"
        app:layout_constraintTop_toBottomOf="@+id/et_phone_registration" />

    <EditText
        android:id="@+id/et_user_name_registration"
        style="@style/Custom_Edit_Text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/user_name"
        app:layout_constraintEnd_toEndOf="@+id/et_name"
        app:layout_constraintStart_toStartOf="@+id/et_name"
        app:layout_constraintTop_toBottomOf="@+id/et_name" />

    <EditText
        android:id="@+id/et_password_registration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        style="@style/Custom_Edit_Text"
        android:inputType="textPassword"
        android:hint="@string/password"
        app:layout_constraintEnd_toEndOf="@+id/et_user_name_registration"
        app:layout_constraintStart_toStartOf="@+id/et_user_name_registration"
        app:layout_constraintTop_toBottomOf="@+id/et_user_name_registration" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_sign_up"
        style="@style/Custom_Button_Style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/sign_up"
        app:layout_constraintEnd_toEndOf="@+id/et_password_registration"
        app:layout_constraintStart_toStartOf="@+id/et_password_registration"
        app:layout_constraintTop_toBottomOf="@+id/et_password_registration" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        style="@style/Custom_text_style_15sp"
        android:textColor="?attr/colorTertiary"
        android:text="@string/already_have_an_account_log_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>