<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.login.LoginFragment">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="16dp" />

    <TextView
        android:id="@+id/tv_login_laung"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Custom_text_style_18sp_gray"
        android:text="@string/english"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/gl_login" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:src="@drawable/ic_gropdown_gray"
        app:layout_constraintBottom_toBottomOf="@+id/tv_login_laung"
        app:layout_constraintStart_toEndOf="@+id/tv_login_laung"
        app:layout_constraintTop_toTopOf="@+id/tv_login_laung" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="110dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="110dp"
        android:src="@drawable/ic_instagram_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_login_laung" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_face_book_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="42dp"
        android:fontFamily="@font/roboto_medium"
        android:lineHeight="21sp"
        android:paddingStart="18dp"
        android:text="@string/continue_with_facebook"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:cornerRadius="8dp"
        app:iconTint="@color/white"
        android:textColor="@color/white"
        app:icon="@drawable/ic_facebook_f"
        app:iconGravity="textStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <ImageView
        android:id="@+id/view"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:src="@drawable/line"
        app:layout_constraintStart_toStartOf="@+id/btn_face_book_login"
        app:layout_constraintTop_toBottomOf="@+id/btn_face_book_login" />

    <TextView
        android:id="@+id/textView2"
        style="@style/Custom_text_style_15sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textColor="?attr/colorTertiary"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/btn_face_book_login"
        app:layout_constraintStart_toStartOf="@+id/btn_face_book_login"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:src="@drawable/line"
        app:layout_constraintEnd_toEndOf="@+id/btn_face_book_login"
        app:layout_constraintTop_toBottomOf="@+id/btn_face_book_login" />

    <EditText
        android:id="@+id/et_login_user_name"
        android:layout_width="0dp"
        style="@style/Custom_Edit_Text"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="42dp"
        android:inputType="textPersonName"
        android:hint="@string/phone_number_username_or_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/et_login_password"
        style="@style/Custom_Edit_Text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/et_login_user_name"
        app:layout_constraintStart_toStartOf="@+id/et_login_user_name"
        app:layout_constraintTop_toBottomOf="@+id/et_login_user_name" />

    <TextView
        android:id="@+id/tv_forgot_password_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="?attr/colorPrimary"
        android:fontFamily="@font/roboto_medium"
        android:textSize="13sp"
        android:lineHeight="15sp"
        android:text="@string/forgot_password"
        app:layout_constraintEnd_toEndOf="@+id/et_login_password"
        app:layout_constraintTop_toBottomOf="@+id/et_login_password" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        style="@style/Custom_Button_Style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="@+id/et_login_password"
        app:layout_constraintStart_toStartOf="@+id/et_login_password"
        app:layout_constraintTop_toBottomOf="@+id/tv_forgot_password_login" />

    <TextView
        android:id="@+id/tv_sign_up_login"
        style="@style/Custom_text_style_15sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:textColor="?attr/colorTertiary"
        android:text="@string/don_t_have_an_account_sign_up"
        app:layout_constraintEnd_toEndOf="@+id/btn_login"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="@+id/btn_login"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:src="@drawable/ic_fotter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tv_sign_up_login"
        app:layout_constraintStart_toStartOf="@+id/tv_sign_up_login" />

</androidx.constraintlayout.widget.ConstraintLayout>